<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/athleteNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/athleteSportInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sport" />

    <EditText
        android:id="@+id/athleteCountryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country" />

    <EditText
        android:id="@+id/athletePerformanceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/best_performance" />

    <EditText
        android:id="@+id/athleteMedalsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medals" />

    <EditText
        android:id="@+id/athleteFactsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/interesting_facts" />
</LinearLayout>
