<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/historyNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/history_name"/>

    <EditText
        android:id="@+id/historyDateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_yyyy_mm_dd"/>

    <EditText
        android:id="@+id/historyDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>
</LinearLayout>
